jackett/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jackett
  labels:
    app.kubernetes.io/name: jackett
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/instance: jackett
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: jackett
    spec:
      containers:
      - name: jackett
        image: linuxserver/jackett:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 9117
          name: http
          protocol: TCP
        resources:
          requests:
            memory: 200Mi
        volumeMounts:
        - mountPath: /config
          name: config
        - mountPath: /downloads
          name: media
          subPath: Scratch/Download
      volumes:
      - name: config
        persistentVolumeClaim:
          claimName: jackett-config
      - name: media
        persistentVolumeClaim:
          claimName: media-share
