jackett/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jackett
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    cert-manager.io/cluster-issuer: letsencrypt-production
  labels:
    app.kubernetes.io/name: jackett
    app.kubernetes.io/instance: jackett
    app.kubernetes.io/component: server
    app.kubernetes.io/part-of: db3000
spec:
  ingressClassName: traefik
  rules:
  - host: jackett.xmple.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: jackett
            port:
              name: http
  tls:
  - hosts:
    - jackett.xmple.io
    secretName: jackett-tls
